加入 极客斋 链接

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -203,6 +203,7 @@ links_settings:
 
 links:
   #Title: http://yoursite.com
+  极客斋: https://chennanzhang.github.io/
   moerats: https://www.moerats.com/
   yangyang: https://yangyang.im/post/CGy0NfhY6/
   viseator: https://www.viseator.com/
