config: update blog config

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Roy 's Home
-subtitle:
-description:
+title: Roy's Home
+subtitle: Less is more
+description: Less is more
 keywords:
-author: Roy ccg
+author: Roy
 language: zh-CN
 timezone:
 
