--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-searchdb": "^1.3.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-inject": "^1.0.0",
+    "hexo-next-share": "github:theme-next/hexo-next-share",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-mathjax": "^0.6.0",
